Simplify "To facilitate site understanding of user preferences"

--- a/index.html
+++ b/index.html
@@ -1292,10 +1292,9 @@ privacy</a>).
 data=] and should avoid burdening the user with additional [=privacy labor=]
 when deciding what [=ancillary data=] to expose. To that end, user agents may
 employ user research, solicitation of general preferences, and heuristics about
-sensitivity of data or trust in a particular context. To facilitate site
-understanding of user preferences, user agents can provide browser-configurable
-signals to directly communicate common user preferences (such as a [=global
-opt-out=]).
+sensitivity of data or trust in a particular context. To help sites understand
+user preferences, user agents can provide browser-configurable signals to
+directly communicate common user preferences (such as a [=global opt-out=]).
 
 <div class="practice">
   <span class="practicelab">Specifications that define functionality for telemetry and analytics
