Simplify "To facilitate site understanding of user preferences"
SHA: a78f4f15084b8b774933cf350430aefa88f727c7
Reason: push, by jyasskin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1564,9 +1564,9 @@ privacy</a>).</p>
 <p><a data-link-type="dfn|abstract-op" data-type="dfn" href="https://infra.spec.whatwg.org/#user-agent">User agents</a> should aggressively <a href="#data-minimization">minimize</a> <a data-link-type="dfn|abstract-op" href="#dfn-ancillary-data" class="internalDFN" id="ref-for-dfn-ancillary-data-6">ancillary data</a> and should avoid burdening the user with additional <a data-link-type="dfn|abstract-op" href="#dfn-privacy-labor" class="internalDFN" id="ref-for-dfn-privacy-labor-5">privacy labor</a>
 when deciding what <a data-link-type="dfn|abstract-op" href="#dfn-ancillary-data" class="internalDFN" id="ref-for-dfn-ancillary-data-7">ancillary data</a> to expose. To that end, user agents may
 employ user research, solicitation of general preferences, and heuristics about
-sensitivity of data or trust in a particular context. To facilitate site
-understanding of user preferences, user agents can provide browser-configurable
-signals to directly communicate common user preferences (such as a <a data-link-type="dfn|abstract-op" href="#dfn-global-opt-out" class="internalDFN" id="ref-for-dfn-global-opt-out-5">global opt-out</a>).</p>
+sensitivity of data or trust in a particular context. To help sites understand
+user preferences, user agents can provide browser-configurable signals to
+directly communicate common user preferences (such as a <a data-link-type="dfn|abstract-op" href="#dfn-global-opt-out" class="internalDFN" id="ref-for-dfn-global-opt-out-5">global opt-out</a>).</p>
 <div class="practice principle"><a class="marker self-link" href="#bp-specifications-that-define-functionality-for-telemetry-and-analytics-should-explicitly-note-the-telemetry-and-analytics-use-to-facilitate-modal-or-general-user-choices"><bdi lang="en">Principle</bdi></a>: <span class="practicelab" id="bp-specifications-that-define-functionality-for-telemetry-and-analytics-should-explicitly-note-the-telemetry-and-analytics-use-to-facilitate-modal-or-general-user-choices">Specifications that define functionality for telemetry and analytics
   should explicitly note the telemetry and analytics use to facilitate modal or general user
   choices.</span>
