'reformulate based on #229 and clarify opening graf'

--- a/index.html
+++ b/index.html
@@ -625,8 +625,9 @@ defaults and choice architectures.
 
 Different procedural mechanisms exist to enable [=people=] to control how they interact
 with systems in the world. Mechanisms that increase the number of [=purposes=] for which
-their [=data=] is being [=processed=] are referred to as [=opt-in=] or
-<dfn data-lt="opt in|opt-in">consent</dfn>; mechanisms that decrease this number of [=purposes=] are known as
+their [=data=] is being [=processed=] or the volume of [=processing=] of their [=data=]
+are referred to as [=opt-in=] or <dfn data-lt="opt in|opt-in">consent</dfn>; mechanisms
+that decrease this number of [=purposes=] or [=processing=] volume are known as
 <dfn data-lt="opt out">opt-out</dfn>.
 
 When deployed thoughtfully, these mechanisms can enhance [=people=]'s [=autonomy=]. Often,
@@ -634,10 +635,9 @@ however, they are used as a way to avoid putting in the difficult work of decidi
 types of [=processing=] are [=appropriate=] and which are not, offloading [=privacy labour=]
 to the people using a system.
 
-In specific cases, [=people=] should be able to [=consent=] to more
-sensitive [=processing=], such as having their [=identity=] recognised across contexts or
-their reading history shared with a company. [=Actors=] need to
-take care that their users are *informed* when granting this [=consent=] and
+In specific cases, [=people=] should be able to [=consent=] to data sharing that would otherwise be restricted,
+such as having their [=identity=] or reading history shared across contexts.
+[=Actors=] need to take care that their users are *informed* when granting this [=consent=] and
 *aware* enough about what's going on that they can know to revoke their consent
 when they want to. They should also ensure that they assess the risk of what *could* be done
 with the data they are collecting or sharing, not just what the stated purpose of that collection
