Tweaks to the Incorporating section (#266)
* Use [[Citation-Style]] instead of just links.

* Use consistent language around violating norms.

Instead of "breaking rules" in one place and "violating norms" in
another.

* Switch from norms to rules in the "Incorporating" section.

--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@ particular situation. Note that people's privacy can also be in tension
 with non-privacy concerns. As discussed in the [[[Ethical-Web]]], "it is important to
 consider the context in which a particular technology is being applied, the expected
 audience(s) for the technology, who the technology benefits and who it may disadvantage,
-and any power dynamics involved". Despite this complexity, there is a basic ground
+and any power dynamics involved" ([[Ethical-Web]]). Despite this complexity, there is a basic ground
 rule to follow:
 
 <div class="practice">
@@ -911,7 +911,7 @@ This is a special case of the more general principle that data should not be use
 Services sometimes use people's data in order to protect those or other people.
 A service that does this should explain what data it's
 using for this purpose. It should also say how it might use or share a person's
-data if it believes that person has broken the rules.
+data if it believes that person has violated the service's rules.
 
 </div>
 
@@ -930,14 +930,14 @@ A site might segregate the data it collects for safety reasons from its business
 
 </aside>
 
-It is attractive to say that if someone violates the norms of a service they're using,
+It is attractive to say that if someone violates the rules of a service they're using,
 then they sacrifice a proportionate amount of their privacy protections, but
 
-1. Often the service can only prevent the norm violation by also collecting data from
+1. Often the service can only prevent the rule violation by also collecting data from
    innocent users. This extra collection is not always [=appropriate=], especially if it
    allows pervasive monitoring ([[RFC7258]], [[RFC7687]]).
 1. If a service operator wants to collect some extra data, it can be tempting for them to
-   define norms and proportionality that allow them to do so.
+   define rules and proportionality that allow them to do so.
 
 The following examples illustrate some of the tensions:
 
@@ -1123,7 +1123,7 @@ recognized. Note that:
 * Sites can do harm even if they can't be completely certain
   that visits come from the same person, so [=user agents=] should also take steps
   to prevent such probabilistic recognition. The [[[Privacy-Threat]]] discusses
-  the tradeoffs involved.
+  the tradeoffs involved. ([[Privacy-Threat]])
 * If a [=user agent=] blocks [=recognition=] between different sites but doesn't
   notice when a single site contains multiple [=contexts=], this can encourage
   [=actors=] to bundle multiple contexts into a single site and privilege the
