--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@ of access to data (including data
 derived from one's personal data) as well as mechanisms to explain the outcomes of automated
 decisions.
 
-## People's Agents {#user-agents}
+## User Agents {#user-agents}
 
 A [=user agent=] acts as an intermediary between a [=person=] (its [=user=]) and the web.
 [=User agents=] implement, to the extent possible, the [=principles=] that collective governance
@@ -817,8 +817,8 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
   <dt><dfn class="export">Duty of Protection</dfn></dt>
   <dd>
     Protection requires [=user agents=] to actively protect their [=user=]'s data, beyond
-    simple security measures. It is insufficient to just encrypt at rest and in transit,
-    but the [=user agent=] must also limit retention, help ensure that only strictly
+    simple security measures. It is insufficient to just encrypt at rest and in transit.
+    The [=user agent=] must also limit retention, help ensure that only strictly
     necessary data is collected, and require guarantees from any [=actor=] that the user agent can
     reasonably be aware that data is shared to.
   </dd>
