--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@ defaults and choice architectures.
 
 Different procedural mechanisms exist to enable [=people=] to control how they interact
 with systems in the world. Mechanisms that increase the number of [=purposes=] for which
-their [=data=] is being [=processed=] or the volume of [=processing=] of their [=data=]
+their [=data=] is being [=processed=] or the amount  their [=data=] is [=processed=]
 are referred to as [=opt-in=] or <dfn data-lt="opt in|opt-in">consent</dfn>; mechanisms
 that decrease this number of [=purposes=] or [=processing=] volume are known as
 <dfn data-lt="opt out">opt-out</dfn>.
