--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ Different procedural mechanisms exist to enable [=people=] to control how they i
 with systems in the world. Mechanisms that increase the number of [=purposes=] for which
 their [=data=] is being [=processed=] or the amount  their [=data=] is [=processed=]
 are referred to as [=opt-in=] or <dfn data-lt="opt in|opt-in">consent</dfn>; mechanisms
-that decrease this number of [=purposes=] or [=processing=] volume are known as
+that decrease this number of [=purposes=] or amount of [=processing=] are known as
 <dfn data-lt="opt out">opt-out</dfn>.
 
 When deployed thoughtfully, these mechanisms can enhance [=people=]'s [=autonomy=]. Often,
