--- a/index.html
+++ b/index.html
@@ -739,8 +739,8 @@ increasing <em>individual</em> control instead of by collective action.
 
 Collecting data at large scales can have significant pro-social outcomes. Problems tend to
 emerge when [=actors=] [=process=] [=data=]
-for collective benefit and for [=self-dealing=] [=purposes=] at the same time.
-The [=self-dealing=] [=purposes=] are often justified as bankrolling the pro-social outcomes
+for collective benefit and for [=disloyal=] [=purposes=] at the same time.
+The [=disloyal=] [=purposes=] are often justified as bankrolling the pro-social outcomes
 but this requires collective oversight to be [=appropriate=].
 
 ### Group Privacy {#group-privacy}
@@ -849,12 +849,13 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
     Because the [=user agent=] is a [=trustworthy agent=], it is held to be loyal to the
     [=person=] using it in all situations, including in preference to the [=user agent=]'s implementer.
     When a [=user agent=] carries out [=processing=] that is detrimental to a [=person=]'s
-    interests and instead benefits another [=actor=], this is <dfn>disloyal</dfn>. Often this would benefit the user agent itself, in which case it is known as <dfn>self-dealing</dfn>. Behaviour can be [=disloyal=] even
+    interests and instead benefits another [=actor=], this is <dfn data-lt="disloyalty">disloyal</dfn>. Often this would benefit the
+    [=user agent=] itself, in which case it is known as "self-dealing". Behaviour can be [=disloyal=] even
     if it is done at the same time as [=processing=] that is in the [=person=]'s interest, what matters is
     that it potentially conflicts with that [=person=]'s interest. Additionally, it is important to keep in
     mind that additional [=processing=] almost always implies additional risk and therefore that [=processing=]
     by a [=trustworthy agent=] that is not explicitly in its [=user=]'s interest is likely to be disloyal.
-    [=Self-dealing=] is always [=inappropriate=]. Loyalty is the avoidance of [=self-dealing=].
+    [=Disloyalty=] is always [=inappropriate=].
   </dd>
 </dl>
 
