--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ defaults and choice architectures.
 
 ### Opt-in, Consent, Opt-out, Global Controls {#opt-in-out}
 
-Different mechanisms exist to enable [=people=] to control how they interact
+Several kinds of mechanisms exist to enable [=people=] to control how they interact
 with systems in the world. Mechanisms that increase the number of [=purposes=] for which
 their [=data=] is being [=processed=] or the amount  their [=data=] is [=processed=]
 are referred to as [=opt-in=] or <dfn data-lt="opt in|opt-in">consent</dfn>; mechanisms
