--- a/index.html
+++ b/index.html
@@ -656,9 +656,7 @@ In specific cases, [=people=] should be able to [=consent=] to data sharing that
 such as having their [=identity=] or reading history shared across contexts.
 [=Actors=] need to take care that their users are *informed* when granting this [=consent=] and
 *aware* enough about what's going on that they can know to revoke their consent
-when they want to. They should also ensure that they assess the risk of what *could* be done
-with the data they are collecting or sharing, not just what the stated purpose of that collection
-or sharing is.
+when they want to.
 [=Consent=] is comparable to the general problem of permissions on the Web
 platform. Both consent and permissions should be requested in a way that lets
 people delay or avoid answering if they're trying to do something else. If
