Processing is sensitive, not purposes (#242)
* processing is sensitive, not purposes

* 'reformulate based on #229 and clarify opening graf'

* Update index.html

Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

* Update index.html

Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

* Update index.html

Co-authored-by: Daniel Appelquist <dan@torgo.com>

* Update index.html

Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

* Update index.html

Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

* Update index.html

Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

* Update index.html

Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

---------

Co-authored-by: Robin Berjon <robin.berjon@nytimes.com>
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>
Co-authored-by: Daniel Appelquist <dan@torgo.com>

--- a/index.html
+++ b/index.html
@@ -640,10 +640,11 @@ defaults and choice architectures.
 
 ### Opt-in, Consent, Opt-out, Global Controls {#opt-in-out}
 
-Different procedural mechanisms exist to enable [=people=] to control how they interact
+Several kinds of mechanisms exist to enable [=people=] to control how they interact
 with systems in the world. Mechanisms that increase the number of [=purposes=] for which
-their [=data=] is being [=processed=] are referred to as [=opt-in=] or
-<dfn data-lt="opt in|opt-in">consent</dfn>; mechanisms that decrease this number of [=purposes=] are known as
+their [=data=] is being [=processed=] or the amount their [=data=] is [=processed=]
+are referred to as [=opt-in=] or <dfn data-lt="opt in|opt-in">consent</dfn>. Mechanisms
+that decrease this number of [=purposes=] or amount of [=processing=] are known as
 <dfn data-lt="opt out">opt-out</dfn>.
 
 When deployed thoughtfully, these mechanisms can enhance [=people=]'s [=autonomy=]. Often,
@@ -651,10 +652,11 @@ however, they are used as a way to avoid putting in the difficult work of decidi
 types of [=processing=] are [=appropriate=] and which are not, offloading [=privacy labour=]
 to the people using a system.
 
-In specific cases, [=people=] should be able to [=consent=] to more
-sensitive [=purposes=], such as having their [=identity=] recognised across contexts or
-their reading history shared with a company. The burden of proof on ensuring that informed
-[=consent=] has been obtained needs to be very high in this case.
+In specific cases, [=people=] should be able to [=consent=] to data sharing that would otherwise be restricted,
+such as having their [=identity=] or reading history shared across contexts.
+[=Actors=] need to take care that their users are *informed* when granting this [=consent=] and
+*aware* enough about what's going on that they can know to revoke their consent
+when they want to.
 [=Consent=] is comparable to the general problem of permissions on the Web
 platform. Both consent and permissions should be requested in a way that lets
 people delay or avoid answering if they're trying to do something else. If
