--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
   <dd>
     Because the [=user agent=] is a [=trustworthy agent=], it is held to be loyal to the
     [=person=] using it in all situations, including in preference to the [=user agent=]'s implementer.
-    When a [=user agent=] carries out [=processing=] that is detrimental to a [=person=]'s
+    When a [=user agent=] carries out [=processing=] that is detrimental to its [=user=]'s
     interests and instead benefits another [=actor=], this is <dfn data-lt="disloyalty">disloyal</dfn>. Often this would benefit the
     [=user agent=] itself, in which case it is known as "self-dealing". Behaviour can be [=disloyal=] even
     if it is done at the same time as [=processing=] that is in the [=person=]'s interest, what matters is
