--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
     [=user agent=] itself, in which case it is known as "self-dealing". Behaviour can be [=disloyal=] even
     if it is done at the same time as [=processing=] that is in the [=person=]'s interest, what matters is
     that it potentially conflicts with that [=person=]'s interest. Additionally, it is important to keep in
-    mind that additional [=processing=] almost always implies additional risk and therefore that [=processing=]
+    mind that additional [=processing=] almost always implies additional risk. Therefore [=processing=]
     by a [=trustworthy agent=] that is not explicitly in its [=user=]'s interest is likely to be disloyal.
     [=Disloyalty=] is always [=inappropriate=].
   </dd>
