Make it clearer that disloyalty must be detrimental to people (#269)
* 'Make it clearer that this is detrimental to people, fixes #241'

* Update index.html

Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

* 'more disloyalty less self-dealing'

* Update index.html

* Update index.html

Co-authored-by: Wendy Seltzer <wseltzer@w3.org>

* Update index.html

Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

---------

Co-authored-by: Robin Berjon <robin.berjon@nytimes.com>
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>
Co-authored-by: Wendy Seltzer <wseltzer@w3.org>

--- a/index.html
+++ b/index.html
@@ -743,8 +743,8 @@ increasing <em>individual</em> control instead of by collective action.
 
 Collecting data at large scales can have significant pro-social outcomes. Problems tend to
 emerge when [=actors=] [=process=] [=data=]
-for collective benefit and for [=self-dealing=] [=purposes=] at the same time.
-The [=self-dealing=] [=purposes=] are often justified as bankrolling the pro-social outcomes
+for collective benefit and for [=disloyal=] [=purposes=] at the same time.
+The [=disloyal=] [=purposes=] are often justified as bankrolling the pro-social outcomes
 but this requires collective oversight to be [=appropriate=].
 
 ### Group Privacy {#group-privacy}
@@ -852,12 +852,14 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
   <dd>
     Because the [=user agent=] is a [=trustworthy agent=], it is held to be loyal to the
     [=person=] using it in all situations, including in preference to the [=user agent=]'s implementer.
-    When a [=user agent=] carries out [=processing=] that is not in the [=person=]'s
-    interest but instead benefits another [=actor=] (such as the user agent's implementer) that behaviour is
-    known as <dfn>self-dealing</dfn>. Behaviour can be [=self-dealing=] even if it is done at the
-    same time as [=processing=] that is in the [=person=]'s interest, what matters is that it
-    potentially conflicts with that [=person=]'s interest. [=Self-dealing=] is always
-    [=inappropriate=]. Loyalty is the avoidance of [=self-dealing=].
+    When a [=user agent=] carries out [=processing=] that is detrimental to its [=user=]'s
+    interests and instead benefits another [=actor=], this is <dfn data-lt="disloyalty">disloyal</dfn>. Often this would benefit the
+    [=user agent=] itself, in which case it is known as "self-dealing". Behaviour can be [=disloyal=] even
+    if it is done at the same time as [=processing=] that is in the [=person=]'s interest, what matters is
+    that it potentially conflicts with that [=person=]'s interest. Additionally, it is important to keep in
+    mind that additional [=processing=] almost always implies additional risk. Therefore [=processing=]
+    that is not explicitly in a [=user=]'s interest is likely to be disloyal.
+    [=Disloyalty=] is always [=inappropriate=].
   </dd>
 </dl>
 
