--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@ from whatever legal identity or identities they may hold.
 <dfn data-lt="recognize|recognized">Recognition</dfn> is the act of realising that a given [=identity=]
 corresponds to the same [=person=] as another [=identity=] which may have been
 observed either in another [=context=] or in the same [=context=] but at a
-different time. A [=person=] is [=recognized=] whether or not their legal identity or
+different time. A [=person=] can be [=recognized=] whether or not their legal identity or
 characteristics of their legal identity are included in the recognition.
 
 In order to uphold the above <a
