Fingerprinting requires that attributes be aggregated
Understanding that is important enough to include another sentence, I
think.

--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,9 @@ browser and platform that are consistent between two or more visits and
 probably unique to the person.
 
 The attributes can be exposed as information about the [=person=]'s device
-that is otherwise benign (as opposed to [[[#hl-sensitive-information]]]).
+that on their own are benign (as opposed to [[[#hl-sensitive-information]]]).
+Taken in the aggregate these attributes could uniquely identify the device, or
+contribute to possible [=cross-context recognition=].
 For example:
 
 * language and time zone;
