--- a/index.html
+++ b/index.html
@@ -1632,8 +1632,8 @@ of social equality ([[?Relational-Governance]]).
 Another case in which collective decision-making is preferable is for [=processing=] for which
 informed individual decision-making is unrealistic (due to the complexity of the processing, the
 volume or frequency of processing, or both). Expecting laypeople (or even experts) to make informed
-decisions relating to complex [=data=] [=processing=] or to make decisions on a very frequent basis
-even if the [=processing=] is relatively simple, is unrealistic if we also want them to have
+decisions relating to complex [=data=] [=processing=] or to make decisions on a very frequent
+basis — even if the [=processing=] is relatively simple — is unrealistic if we also want them to have
 reasonable levels of [=autonomy=] in making these decisions.
 
 The purpose of this principle is to require that [=data governance=] provide ways to distinguish
