--- a/index.html
+++ b/index.html
@@ -1955,13 +1955,29 @@ Examples of alternatives to interrupting users with consent requests include:
 <div class="practice">
 <p>
   <span class="practicelab" id="principle-consent-withdraw">
-    It should be as easy for a user to check what consent they have given,
+  It should be as easy for a [=person=] to check what consent they have given,
 	to withdraw consent, or to opt out or object,
 	as to give consent.
   </span>
 </p>
 </div>
 
+A [=person=] providing consent does not imply consent from other [=people=] whose data may be
+included or implicated.
+
+<div class="practice">
+  <p>
+    <span class="practicelab" id="principle-consent-otherpeople">
+      [=Actors=] should provide accessible functionality to access, correct and remove data about
+      [=people=] to those [=people=] when that data may have been provided by someone else.
+    </span>
+  </p>
+</div>
+
+<div class="note">
+  See <a href="#group-privacy">Group Privacy</a> and <a href="#data-rights">Data Rights</a> for
+  further discussion of privacy of people other than the user.
+</div>
 
 ## Notifications and Interruptions {#interruptions}
 
