change wording around self-governing

--- a/index.html
+++ b/index.html
@@ -691,8 +691,8 @@ the work of ensuring [=data processing=] of which they are the subject or recipi
 Data systems that are based on asking [=people=] for their [=consent=] tend to increase
 [=privacy labour=].
 
-More generally, implementations of [=privacy=] are often dominated by self-governing approaches that
-offload [=labour=] to [=people=]. This is notably true of the regimes descended from the
+More generally, implementations of [=privacy=] are often dominated by approaches that
+offload [=labour=] to [=people=] (self-governing). This is notably true of the regimes descended from the
 <dfn data-lt="FIPs">Fair Information Practices</dfn> ([=FIPs=]), a loose set of principles initially
 elaborated in the 1970s in support of individual [=autonomy=] in the face of growing concerns with databases. The
 [=FIPs=] generally assume that there is sufficiently little [=data processing=] taking place that any
